changed tabel heading

--- a/Swiggypage.html
+++ b/Swiggypage.html
@@ -29,7 +29,7 @@
     <table border="1px"cellpadding="20px">
         <thead >
 <th >SI.NO</th>
-<th>FOOD</th>
+<th>DRESS</th>
 <th>QUALITY</th>
 <th>QUANTITY</th>
 <th>PRICE</th>
